[be] room schema 에 '입장해 있는 유저' 배열 추가
